# intoTheWild

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/include/: funzioni.hpp
code/src/: funzioni.cpp
distribution/: CueHOGimN.txt  CueHOGimN.txt~  CueHOGimNCOPY.txt  CueHOGimP.txt  CuePDimN.txt  CuePDimP.txt  CueSWVimN.txt  CueSWVimNCOPY.txt  CueSWVimP.txt
include/: config.hpp  cues.hpp  funzioni.hpp  histogram.hpp  mserWrap.hpp  utils.hpp
src/: cues.cpp  histogram.cpp  main.cpp  mserWrap.cpp  utils.cpp
